--- a/style.css
+++ b/style.css
@@ -76,11 +76,11 @@ button {
 }
 
 #takePhotoButton {
-  left: calc(50% - 40px);
-  top: calc(50% - 40px);
+  /* left: calc(50% - 40px);
+  top: calc(50% - 40px); */
   width: 80px;
   height: 80px;
-  background-image: url('img/ic_photo_camera_white_48px.svg');
+  /* background-image: url('img/ic_photo_camera_white_48px.svg'); */
   border-radius: 50%;
   background-color: rgba(0, 0, 0, 0.5);
 }
