--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@ body {
   background: #000;
 }
 
+/* .container-fluid{
+  padding: 0 !important;
+  margin: 0 !important;
+} */
+
 #vid_container {
   position: fixed;
   top: 0;
@@ -14,21 +19,13 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  z-index: 9;
-}
-
-.img_black_overlay{
-  width: 100%;
-  height: 100%;            
-  position: absolute;
-  background: rgba(0, 0, 0, 0.5);
-  top:0;
   z-index: 10;
 }
 
 #svg_cover{
-  top:0;
   position: absolute;
+  top:0;  
+  z-index: 30;
 }
 
 /* .clip-path{
@@ -59,7 +56,13 @@ body {
 /*  Button style from: 
     https://googlesamples.github.io/web-fundamentals/fundamentals/media/mobile-web-video-playback.html */
 
-button {
+
+/* .btns_float{
+  position: absolute;
+} */
+
+
+/* button {
   outline: none;
   position: absolute;
   color: white;
@@ -72,17 +75,73 @@ button {
   background-position: center center;
   background-repeat: no-repeat;
   pointer-events: auto;
-  z-index: 2;
+} */
+
+
+
+
+.explain_text{
+  position: absolute;
+  top: 10%;
+  text-align: center;
+  font-size: large;
+  color: #00c0ff;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  z-index: 40;
 }
 
+.displayTakenPhoto{
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 20;
+}
+
+.slider{
+  overflow-y: hidden;
+  position: absolute;
+  bottom: 0;
+  height: 20%;
+  background-color: none;
+  width: 100%;
+  transition-property: all;
+  transition-duration: .5s;
+  transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
+  z-index: 60;
+}
+
+.slider.closed {
+	height: 0;
+}
+
+#focusDiv{
+  position: absolute;
+  border-radius: 20px;
+  z-index: 200;
+}
+
+#slider_actMax{
+  width: 100%;
+  height: 25px;
+}
+
+#toggle_btns{
+  padding: 10px;
+  border-radius: 80px;
+}
+
+
 #takePhotoButton {
-  /* left: calc(50% - 40px);
-  top: calc(50% - 40px); */
+  position: absolute;
+  left: calc(50% - 40px);
+  bottom: 5%;
   width: 80px;
   height: 80px;
-  /* background-image: url('img/ic_photo_camera_white_48px.svg'); */
   border-radius: 50%;
   background-color: rgba(0, 0, 0, 0.5);
+  z-index: 50;
 }
 
 #takePhotoButton:active {
