--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@ body {
   background: #000;
 }
 
+input[type=radio] {
+  position: absolute;
+  visibility: hidden;
+  display: none;
+}
 /* .container-fluid{
   padding: 0 !important;
   margin: 0 !important;
@@ -39,45 +44,24 @@ body {
   bottom: 0;
 }
 
-/* #video_overlay {
-  position: fixed;
-  display: none;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-
-  z-index: 10;
-  background-color: #111;
+/* .container-fluid .slider .row .btn-group-toggle {
+  border-top-left-radius: 120px;
+  
 } */
-
-/*  Button style from: 
-    https://googlesamples.github.io/web-fundamentals/fundamentals/media/mobile-web-video-playback.html */
-
-
-/* .btns_float{
-  position: absolute;
-} */
+.btn-group .btn:first-child {
+  border-radius: 20px 0 0 20px;
+}
 
 
-/* button {
-  outline: none;
-  position: absolute;
-  color: white;
-  display: block;
-  opacity: 1;
-  background: transparent;
-  border: solid 2px #fff;
-  padding: 0;
-  text-shadow: 0px 0px 4px black;
-  background-position: center center;
-  background-repeat: no-repeat;
-  pointer-events: auto;
-} */
+.btn-group .btn:last-child {
+  border-radius: 0 20px 20px 0;
+}
 
-
+.container-fluid .slider .row .btn-group-toggle >label {
+  display:flex;
+  justify-content:center;
+  align-items:center;
+}
 
 
 .explain_text{
@@ -116,11 +100,10 @@ body {
 	height: 0;
 }
 
-/* .predLabels{
-
-
-
-} */
+.predLabels{
+  height: 100%;
+  text-align: center;
+}
 
 
 #focusDiv{
@@ -135,8 +118,11 @@ body {
 }
 
 #toggle_btns{
-  padding: 10px;
-  border-radius: 80px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  border-radius: 60px;
 }
 
 
