--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@ body {
   margin: 0px;
   padding: 0px;
   background: #000;
+  height: 100%;
+  width: 100%;
+  overflow: auto;
 }
 
 input[type=radio] {
