--- a/style.css
+++ b/style.css
@@ -1,10 +1,7 @@
 body {
   margin: 0px;
   padding: 0px;
-  background: #000;
-  height: 100%;
-  width: 100%;
-  overflow: auto;
+  background: #000;  
 }
 
 input[type=radio] {
@@ -17,12 +14,6 @@ input[type=radio] {
   margin: 0 !important;
 } */
 
-#vid_container {
-  position: fixed;
-  top: 0;
-  left: 0;
-}
-
 #video {
   width: 100%;
   height: 100%;
@@ -34,17 +25,7 @@ input[type=radio] {
   position: absolute;
   top:0;  
   z-index: 30;
-}
-
-/* .clip-path{
-  clip-path: polygon(var(p0_x) var(p0_y), var(p1_x) var(p1_y), var(p2_x) var(p2_y), 5% 25%, 95% 25%, 95% 76%, 5% 76%, 5% 100%, 100% 100%, 100% 0%);
-} */
-
-#gui_controls {
-  position: fixed;
-  background-color: #111; /*rgba(255, 0, 0, 0.5);*/
-  z-index: 2;
-  bottom: 0;
+  -webkit-overflow-scrolling: touch;
 }
 
 .btn-group .btn:first-child {
@@ -167,67 +148,6 @@ input[type=radio] {
 
 #switchCameraButton[aria-pressed='true'] {
   background-image: url('img/ic_camera_front_white_36px.svg');
-}
-
-@media screen and (orientation: portrait) {
-  /* portrait-specific styles */
-
-  /* video_container (video) doesn't respect height... 
-       so we will fill it in completely in portrait mode
-    */
-  #vid_container {
-    width: 100%;
-    height: 80%;
-  }
-
-  #gui_controls {
-    width: 100%;
-    height: 20%;
-    left: 0;
-  }
-
-  #switchCameraButton {
-    left: calc(20% - 32px);
-    top: calc(50% - 32px);
-  }
-
-  #toggleFullScreenButton {
-    left: calc(80% - 32px);
-    top: calc(50% - 32px);
-  }
-}
-
-@media screen and (orientation: landscape) {
-  #vid_container {
-    width: 80%;
-    height: 100%;
-  }
-
-  #vid_container.left {
-    left: 20%;
-  }
-
-  /* we default to right */
-  #gui_controls {
-    width: 20%;
-    height: 100%;
-    right: 0;
-  }
-
-  /* for the lefties */
-  #gui_controls.left {
-    left: 0;
-  }
-
-  #switchCameraButton {
-    left: calc(50% - 32px);
-    top: calc(18% - 32px);
-  }
-
-  #toggleFullScreenButton {
-    left: calc(50% - 32px);
-    top: calc(82% - 32px);
-  }
 }
 
 input[type="range"] {
