--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ input[type=radio] {
 }
 
 #takePhotoButton:active {
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 #retakeButton {
@@ -125,6 +125,10 @@ input[type=radio] {
   width: 60px;
   height: 60px;
   font-size: 30px;
+}
+
+#retakeButton:active {
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 #toggleFullScreenButton {
@@ -211,7 +215,8 @@ input[type="range"]::-webkit-slider-runnable-track {
   height: 36px;
   border-radius: 50px;
   cursor: pointer;
-  background: #ccc;
+  background: rgba(204, 204, 204, 0.6);
+  
 }
 
 input[type="range"]:active::-webkit-slider-runnable-track {
@@ -223,7 +228,7 @@ input[type="range"]::-moz-range-track {
   height: 36px;
   border-radius: 50px;
   cursor: pointer;
-  background: #ccc;
+  background: rgba(204, 204, 204, 0.6);
 }
 
 input[type="range"]::-ms-track {
@@ -237,7 +242,7 @@ input[type="range"]::-ms-track {
 }
 
 input[type="range"]::-ms-fill-lower {
-  background: #ccc;
+  background: rgba(204, 204, 204, 0.6);
 }
 
 input[type="range"]:focus::-ms-fill-lower {
@@ -245,7 +250,7 @@ input[type="range"]:focus::-ms-fill-lower {
 }
 
 input[type="range"]::-ms-fill-upper {
-  background: #ccc;
+  background: rgba(204, 204, 204, 0.6);
 }
 
 input[type="range"]:focus::-ms-fill-upper {
