--- a/style.css
+++ b/style.css
@@ -168,6 +168,20 @@ btn:focus, a:focus
   font-family: 'MuseoModerno', cursive;
 }
 
+#one_preResult{
+  display:flex;
+  border-radius: 30px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: whitesmoke;
+  color: whitesmoke;
+  font-family: 'MuseoModerno', cursive;
+  font-size: larger;
+  justify-content: center;
+  align-items: center;
+  text-align:center;
+}
+
 #takePhotoButton {
   width: 80px;
   height: 80px;
