modified retouch function, add touchevent handler 1. not draw only when move to another grid 2. added adding touch event and remove touching event

--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@ btn:focus, a:focus
   border-color: whitesmoke;
   color: whitesmoke;
   font-family: 'MuseoModerno', cursive;
-  font-size: larger;
+  font-size: large;
   justify-content: center;
   align-items: center;
   text-align:center;
