--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ input[type=radio] {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  position:sticky;
+  position:absolute;
   z-index: 10;
 }
 
