--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ input[type=radio] {
 #video {
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  object-fit: cover;
   position:absolute;
   z-index: 10;
 }
