--- a/style.css
+++ b/style.css
@@ -17,12 +17,20 @@ input[type=radio] {
   margin: 0 !important;
 }
 
+#mainDisplayDiv{
+  width: 100%; 
+  height: 100%;
+  position: relative;
+  overflow: hidden;
+}
+
 #video {
   width: 100%;
   height: 100%;
   object-fit: cover;
   position:absolute;
   z-index: 10;
+  
 }
 
 #svg_cover{
