--- a/style.css
+++ b/style.css
@@ -30,8 +30,11 @@ input[type=radio] {
   object-fit: cover;
   position:absolute;
   z-index: 10;
-  top: 0;
-  left: 0;
+  /* top: 0;
+  left: 0; */
+  display: flex;
+  justify-content: center; 
+  align-items: center; 
 }
 
 #svg_cover{
